--- a/KarácsonyiWeboldal/style.css
+++ b/KarácsonyiWeboldal/style.css
@@ -24,3 +24,71 @@
     color: white;
     margin: 200px 140px 0 140px;
 }
+
+.vasarlas {
+    width: 300px;
+    border: 2px solid #EE4B2B;
+    background-color: #D22B2B;
+    border-radius: 10px;
+    color: white;
+
+}
+
+.vasarlas:hover {
+    background-color: #EE4B2B;
+}
+
+.categorys,
+.category {
+    display: flex;
+    justify-content: center;
+}
+
+.category_img {
+    width: 350px;
+    height: 200px;
+}
+
+h2 {
+    text-align: center;
+    margin: 40px 0 30px 0;
+}
+
+.category_name,
+a {
+    text-align: center;
+    text-decoration: none;
+    color: #D22B2B;
+    font-weight: bold;
+}
+
+.contact_text {
+    text-align: center;
+}
+
+.contact,
+.contact_button {
+    text-align: center;
+
+
+}
+
+.contact_button {
+    width: 200px;
+    border: 2px solid #EE4B2B;
+    background-color: #D22B2B;
+    border-radius: 10px;
+    color: white;
+}
+
+.contact_button:hover {
+    background-color: #EE4B2B;
+}
+
+footer {
+    text-align: center;
+    font-size: 24px;
+    background-color: #D22B2B;
+    color: white;
+    margin-top: 30px;
+}
